# se2-dev-skills

./: .clinerules  .gitignore  AGENTS.md  CLAUDE.md  README.md
install/: claude.bat  cline.bat  kilocode.bat  opencode.bat
install/helpers/: install.bat
skills/se2-dev-game-code/: Advanced.md  Clean.bat  CodeSearch.md  CommandExecution.md  CommandExecutionDetails.md  (+25 more)
skills/se2-dev-mod/: Clean.bat  CommandExecution.md  CommandExecutionDetails.md  ModTemplate.md  Prepare.bat  Prepare.md  SKILL.md  Troubleshooting.md  index_mods.py  pyproject.toml  search_mods.py  summarize_whitelist.py
skills/se2-dev-mod/actions/: bash.md  prepare.md  search.md
skills/se2-dev-plugin/: AccessTools.md  Clean.bat  ClientPlugin.md  CommandExecution.md  CommandExecutionDetails.md  Guide.md  OtherPluginsAsExamples.md  PatchInjections.md  Patching.md  PatchingSpecialCases.md  Plugin.md  PreloaderPatching.md  Prepare.bat  Prepare.md  Publicizer.md  SKILL.md  ServerPlugin.md  TranspilerPatching.md  UtilityScripts.md  download_plugin_source.py  download_pluginhub.py  git_utils.py  hierarchy_tree.py  index_plugin_code.py  index_plugins.py  list_plugins.py  plugin_paths.py  plugin_registry.py  pyproject.toml  run_prepare.sh  search_plugin_code.py  search_plugins.py
skills/se2-dev-plugin/Examples/Client/: DecodePixelDataPrepatch.cs  ExamplePrefixPostfixPatch.cs  ExamplePrepatch.cs  ExampleTranspilerPatch.cs  Preloader.cs
skills/se2-dev-plugin/Examples/Server/: ExamplePatch.cs  ExampleServerPatch.cs  ExampleTranspilerPatch.cs
skills/se2-dev-plugin/actions/: bash.md  prepare.md  search.md
(+44 files in other folders)
