[project]
name = "se2-dev-plugin"
version = "0.1.0"
description = "Plugin development for Space Engineers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "lxml>=6.0.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-markdown>=0.5.1",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-xml>=0.7.0",
]
